2.1-beta 18  (26 Jun 07)
===========
- added scalar references: \$x is equivalent to $x => $x.  this sugar
  was added for the common case of passing a key/value pair to copy a
  scalar into the local/this environment of a function.

2.1-beta 17  (17 Jun 07)
===========
- reduced number of Class.forName calls made when parsing scripts...
  should help those using Sleep in Java applets ;) 
  [p.s. sorry I wasn't able to take care of this sooner]
- added a new type of literal for resolving a Java class i.e.:
  ^java.util.LinkedList resolves to java.util.LinkedList.class
  ^Map$Entry would resolve to java.util.Map$Entry.class  etc..
- added a new predicate 'isa' for determining if an object is a 
  instance of a specific class i.e.:  "string" isa ^String
- added a better error message for class cast exceptions caught w/i
  the interpreter.
- added a $__SCRIPT__ variable to indicate the name of the executed
  script when running a Sleep script from the command line.
- added a typeOf($scalar) function to retrieve the class backing the
  specified scalars value.  
- added the ability to specify a failure message with an assert i.e.:
  assert <predicate> : <message>; 
- setField can now accept a class literal as its first argument for
  updating a static field
- &use can now accept a class literal as its first argument (safer
  than specifying bridge as a string as class literals are resolved 
  at compile time)
- updated &cast and &casti to allow a class literal to be specified
  as the type to cast to.  
- added a lindexOf function to obtain the last index of a substring
- sleep console now shares one pool of imported packages for evaluations
- added newInstance(^Class|@, &closure) for creating a proxy instance
  of a Java object backed by the specified interfaces
- try/catch is no longer dependent on putting the caught value into
  the global scope.
- returning within a try block no longer breaks Sleep's exception
  mechanism.