@@ -1,0 +1,10 @@
+2
+1
+2
+9
+6
+5
+0.32647575623792624
+0.2355237906476252
+0.34911535662488336
+0.4480776326931518
